# inkan-management-utility

./: .gitignore  Cargo.toml  README.md  batch_output.json  input5-new.json
generated_private_keys/: HelloWorld.inkan  HelloWorldPGP  HelloWorldPGP.pgp  HelloWorldPGP2  HelloWorldPGP2.pgp  HelloWorldPGP3  HelloWorldPGP3.pgp
src/: abi.rs  app.rs  cli.rs  decoder.rs  defaults.rs  encoding.rs  key.rs  main.rs  process.rs  signing.rs  types.rs  util.rs  write_signed_transactions_to_file.rs
src/commands/: decrypt_auto.rs  decrypt_modern.rs  decrypt_pgp.rs  key_save.rs  keygen.rs  mod.rs
src/crypto/: mod.rs  modern.rs  nostr_utils.rs  payload.rs  pgp.rs
src/screens/: advanced_tools.rs  batch.rs  choose_delegation_info_dir.rs  choose_permanent_invalidation_info_dir.rs  choose_redelegation_info_dir.rs  choose_revocation_info_dir.rs  confirm_ok.rs  confirm_quit.rs  create_delegation.rs  create_inkan_identity.rs  create_key_pair.rs  create_permanent_invalidation.rs  create_redelegation.rs  create_revocation.rs  decrypt_file.rs  decrypt_file_details.rs  keygen.rs  main_menu.rs  manually_input_delegation_info.rs  mod.rs  recover_inkan_identity.rs  result.rs  select_delegation_info_file.rs  select_file_for_decryption.rs  select_permanent_invalidation_info_file.rs  select_redelegation_info_file.rs  select_revocation_info_file.rs
src/tui/: defaults.rs  mod.rs
src/ui/: common_nav.rs  components.rs  help.rs  layout.rs  mod.rs  style.rs
src/util/: parse_delegation_env.rs
transaction_input_templates/: delegation_input_template.txt  permanent_invalidation_input_template.txt  redelegation_input_template.txt  revocation_input_template.txt
