[package]
name = "inkan_offline_tx_batch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# ethers split crates (no extra features)
ethers-core = "2"
ethers-signers = "2"

# async runtime for ethers-signers
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# raw key handling
k256 = { version = "0.13", features = ["ecdsa"] }


rand_core = "0.6"
bech32 = "0.9"

