[package]
name = "inkan-management-utility"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ethers-core = "2"
ethers-signers = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
bech32 = "0.9"
ratatui = "0.26"
crossterm = "0.27"
async-trait = "0.1"